Rewrite About section as Conclusions in future historian style

--- a/about.html
+++ b/about.html
@@ -145,15 +145,15 @@
     </section>
 
     <section id="about">
-        <h2>About</h2>
+        <h2>Conclusions</h2>
         <div class="about-content">
-            <p>The Murphy Experiment is a sonic laboratory where musical boundaries go to die. Born from the creative chaos of a global pandemic in 2020, they blend progressive rock with humor, experimentation, and unapologetic originality into something uniquely unhinged.</p>
+            <p><em>Analysis reveals this collective designated themselves a "sonic laboratory" - terminology suggesting deliberate experimentation and boundary dissolution. Their output demonstrates characteristics of what 21st-century Earth cultures classified as "progressive rock," combined with atypical elements: humor integration, unconventional structural approaches, and what contemporary documentation refers to as "unapologetic originality."</em></p>
             <br>
-            <p>Their sound careens from introspective melodies to full-throttle musical mayhem, always with a wink and a nod to the absurdity of it all.</p>
+            <p>Musical compositions exhibit extreme dynamic range - oscillating between contemplative melodic passages and what archival records describe as "full-throttle musical mayhem." Notable is their consistent deployment of self-aware absurdist elements throughout their work.</p>
             <br>
-            <p>When things get really out of hand, their sippy cup-beer drinking alter egos, The Plow Monsters, take the wheel. Fronted by the legendary Cowsick Steve and his bovine-defending anthems, The Plow Monsters prove that sometimes the best music comes from letting go of the steering wheel entirely.</p>
+            <p>Of particular interest: documented evidence of an alter-ego phenomenon labeled "The Plow Monsters." Field notes indicate these personalities emerged during periods of heightened creative chaos, characterized by the consumption of fermented beverages from juvenile drinking vessels. Led by an entity known as "Cowsick Steve," this faction produced thematically bovine-centric compositions - a curious cultural artifact worthy of further study.</p>
             <br>
-            <p>The Murphy Experiment makes music for misfits, thinkers, and anyone who's ever thought "yeah, but what if we tried THIS instead?"</p>
+            <p>Subject collective appears to have attracted a demographic of social outliers, analytical thinkers, and individuals exhibiting resistance to conventional creative paradigms. Primary ideology documented as: "Yeah, but what if we tried THIS instead?"</p>
         </div>
     </section>
 
