Rewrite What's Next as Ongoing Investigation with parallel universe discovery twist

--- a/about.html
+++ b/about.html
@@ -158,11 +158,17 @@
     </section>
 
     <section id="upcoming">
-        <h2>What's Next</h2>
+        <h2>Ongoing Investigation</h2>
         <div class="about-content">
-            <p>The Murphy Experiment continues to push boundaries and explore new sonic territories. Stay tuned for upcoming releases and projects.</p>
+            <p><em><strong>URGENT ADDENDUM - Excavation Site Update:</strong> Recent archaeological surveys have uncovered a previously unknown artifact cache containing what appear to be fragmentary journal entries and cryptic technical schematics. Initial analysis suggests... this cannot be correct. The data implies the subjects may have developed or discovered a method of interdimensional travel.</em></p>
             <br>
-            <p>Follow the band on social media and Bandcamp to be the first to know about new music, videos, and live performances.</p>
+            <p>Cross-referencing these findings with their musical catalog reveals potential correlation. Several compositions contain anomalous lyrical content describing impossible scenarios, divergent timelines, and what the subjects termed "parallel universes." Initially dismissed as creative fiction, these references now warrant serious reconsideration in light of the discovered schematics.</p>
+            <br>
+            <p>Most intriguing: references to musical documentation of these alleged journeys. If authenticated, this would represent the first known instance of artistic chronicle of interdimensional exploration in human history. The implications are staggering.</p>
+            <br>
+            <p>Excavation continues. Further artifacts expected. This researcher maintains scientific skepticism while acknowledging the extraordinary nature of preliminary findings. Whether elaborate hoax, metaphorical expression, or genuine evidence of multiverse traversal remains to be determined. Updates forthcoming as analysis proceeds.</p>
+            <br>
+            <p><em>For real-time updates on discoveries, monitor their archival channels on platforms designated "Bandcamp" and contemporary social media networks.</em></p>
         </div>
     </section>
 
