Add Punch video as VID-006 and update analysis to 6 videos

--- a/videos.html
+++ b/videos.html
@@ -207,7 +207,7 @@
         <div class="section-label">CASE #1310 - VISUAL EVIDENCE CATALOG</div>
         <h2>Recovered Footage Archive</h2>
         <div class="artifact-note">
-            <strong>Archivist's Assessment:</strong> Five discrete video artifacts recovered from historical data repositories (platform designation: "Vimeo"). Each artifact provides crucial visual documentation of subject group's creative output during the 2020-2024 CE period. Analysis reveals consistent aesthetic choices: outdoor terrestrial locations, performance-based documentation, and narrative elements ranging from investigative (Evidence Item VID-001) to geographical commentary (VID-002) to bovine advocacy (VID-005). Quality: High-definition. Authentication status: Verified. Dimensional anomalies detected: Under investigation.
+            <strong>Archivist's Assessment:</strong> Six discrete video artifacts recovered from historical data repositories (platform designation: "Vimeo"). Each artifact provides crucial visual documentation of subject group's creative output during the 2020-2024 CE period. Analysis reveals consistent aesthetic choices: outdoor terrestrial locations, performance-based documentation, and narrative elements ranging from investigative (Evidence Item VID-001) to geographical commentary (VID-002) to percussive aggression studies (VID-006) to bovine advocacy (VID-005). Quality: High-definition. Authentication status: Verified. Dimensional anomalies detected: Under investigation.
         </div>
         <div class="videos-grid">
             <div class="video-container">
@@ -239,6 +239,14 @@
                 <div class="video-title">Thursdays</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/1126706301?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Thursdays"></iframe>
+                </div>
+            </div>
+
+            <div class="video-container">
+                <div class="video-code">EVIDENCE ITEM: VID-006</div>
+                <div class="video-title">Punch</div>
+                <div class="video-wrapper">
+                    <iframe src="https://player.vimeo.com/video/1126748070?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Punch"></iframe>
                 </div>
             </div>
 
