Add placeholders for all 10 videos matching album track order

--- a/videos.html
+++ b/videos.html
@@ -137,6 +137,12 @@
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
         }
 
+        .video-container.placeholder {
+            background: rgba(212, 197, 160, 0.7);
+            border: 3px dashed rgba(139, 0, 0, 0.5);
+            opacity: 0.8;
+        }
+
         .video-wrapper {
             position: relative;
             padding-bottom: 56.25%;
@@ -154,12 +160,49 @@
             height: 100%;
         }
 
+        .placeholder-box {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            border-radius: 10px;
+            background: repeating-linear-gradient(
+                45deg,
+                rgba(139, 0, 0, 0.1),
+                rgba(139, 0, 0, 0.1) 10px,
+                rgba(139, 0, 0, 0.05) 10px,
+                rgba(139, 0, 0, 0.05) 20px
+            );
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 2px solid rgba(139, 0, 0, 0.3);
+        }
+
+        .placeholder-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: #8b0000;
+            font-weight: bold;
+            font-size: 1.1rem;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+        }
+
         .video-title {
             font-size: 1.5rem;
             color: #3d2813;
             margin-bottom: 20px;
             text-align: center;
             font-weight: bold;
+        }
+
+        .placeholder .video-title {
+            color: #8b0000;
+            opacity: 0.7;
         }
 
         .video-code {
@@ -169,6 +212,28 @@
             letter-spacing: 0.1em;
             margin-bottom: 15px;
             font-weight: bold;
+        }
+
+        .status-badge {
+            display: inline-block;
+            padding: 4px 12px;
+            border-radius: 15px;
+            font-size: 0.7rem;
+            letter-spacing: 0.08em;
+            margin-left: 10px;
+            font-weight: bold;
+        }
+
+        .status-available {
+            background: rgba(0, 100, 0, 0.2);
+            color: #006400;
+            border: 1px solid #006400;
+        }
+
+        .status-pending {
+            background: rgba(139, 0, 0, 0.2);
+            color: #8b0000;
+            border: 1px solid #8b0000;
         }
 
         footer {
@@ -207,51 +272,93 @@
         <div class="section-label">CASE #1310 - VISUAL EVIDENCE CATALOG</div>
         <h2>Recovered Footage Archive</h2>
         <div class="artifact-note">
-            <strong>Archivist's Assessment:</strong> Six discrete video artifacts recovered from historical data repositories (platform designation: "Vimeo"). Each artifact provides crucial visual documentation of subject group's creative output during the 2020-2024 CE period. Analysis reveals consistent aesthetic choices: outdoor terrestrial locations, performance-based documentation, and narrative elements ranging from investigative (Evidence Item VID-001) to geographical commentary (VID-002) to percussive aggression studies (VID-006) to bovine advocacy (VID-005). Quality: High-definition. Authentication status: Verified. Dimensional anomalies detected: Under investigation.
+            <strong>Archivist's Assessment:</strong> Ten visual artifacts identified corresponding to Primary Artifact Collection #1 track sequence. Current recovery status: 6 of 10 artifacts successfully restored and authenticated. Remaining 4 items undergoing digital restoration and authentication protocols. Analysis of recovered items reveals consistent aesthetic choices and performance documentation. Items VID-005, VID-007, VID-008, and VID-009 remain in laboratory analysis - corrupted data being reconstructed. Estimated completion: Progressive release schedule. Quality: High-definition. Authentication status: In progress. Dimensional anomalies detected: Under investigation.
         </div>
         <div class="videos-grid">
+            <!-- VID-001 -->
             <div class="video-container">
-                <div class="video-code">EVIDENCE ITEM: VID-001</div>
+                <div class="video-code">EVIDENCE ITEM: VID-001 <span class="status-badge status-available">AVAILABLE</span></div>
                 <div class="video-title">The Search, What's in the Box?</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/1126403069?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="The Search, What's in the Box?"></iframe>
                 </div>
             </div>
 
+            <!-- VID-002 -->
             <div class="video-container">
-                <div class="video-code">EVIDENCE ITEM: VID-002</div>
+                <div class="video-code">EVIDENCE ITEM: VID-002 <span class="status-badge status-available">AVAILABLE</span></div>
                 <div class="video-title">Too Far North (To Get a Tan)</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/1126666770?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Too Far North (To Get a Tan)"></iframe>
                 </div>
             </div>
 
+            <!-- VID-003 -->
             <div class="video-container">
-                <div class="video-code">EVIDENCE ITEM: VID-003</div>
+                <div class="video-code">EVIDENCE ITEM: VID-003 <span class="status-badge status-available">AVAILABLE</span></div>
                 <div class="video-title">Making Sense</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/1126683545?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Making Sense"></iframe>
                 </div>
             </div>
 
+            <!-- VID-004 -->
             <div class="video-container">
-                <div class="video-code">EVIDENCE ITEM: VID-004</div>
+                <div class="video-code">EVIDENCE ITEM: VID-004 <span class="status-badge status-available">AVAILABLE</span></div>
                 <div class="video-title">Thursdays</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/1126706301?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Thursdays"></iframe>
                 </div>
             </div>
 
+            <!-- VID-005 PLACEHOLDER -->
+            <div class="video-container placeholder">
+                <div class="video-code">EVIDENCE ITEM: VID-005 <span class="status-badge status-pending">UNDER INVESTIGATION</span></div>
+                <div class="video-title">CFC Free (Cling Film Figurines) Live at Paddy's</div>
+                <div class="placeholder-box">
+                    <div class="placeholder-text">⚠ DATA RECONSTRUCTION IN PROGRESS ⚠<br><br>RESTORATION PENDING</div>
+                </div>
+            </div>
+
+            <!-- VID-006 -->
             <div class="video-container">
-                <div class="video-code">EVIDENCE ITEM: VID-006</div>
+                <div class="video-code">EVIDENCE ITEM: VID-006 <span class="status-badge status-available">AVAILABLE</span></div>
                 <div class="video-title">Punch</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/1126748070?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Punch"></iframe>
                 </div>
             </div>
 
+            <!-- VID-007 PLACEHOLDER -->
+            <div class="video-container placeholder">
+                <div class="video-code">EVIDENCE ITEM: VID-007 <span class="status-badge status-pending">UNDER INVESTIGATION</span></div>
+                <div class="video-title">Idle Bones</div>
+                <div class="placeholder-box">
+                    <div class="placeholder-text">⚠ DATA RECONSTRUCTION IN PROGRESS ⚠<br><br>RESTORATION PENDING</div>
+                </div>
+            </div>
+
+            <!-- VID-008 PLACEHOLDER -->
+            <div class="video-container placeholder">
+                <div class="video-code">EVIDENCE ITEM: VID-008 <span class="status-badge status-pending">UNDER INVESTIGATION</span></div>
+                <div class="video-title">Climatize</div>
+                <div class="placeholder-box">
+                    <div class="placeholder-text">⚠ DATA RECONSTRUCTION IN PROGRESS ⚠<br><br>RESTORATION PENDING</div>
+                </div>
+            </div>
+
+            <!-- VID-009 PLACEHOLDER -->
+            <div class="video-container placeholder">
+                <div class="video-code">EVIDENCE ITEM: VID-009 <span class="status-badge status-pending">UNDER INVESTIGATION</span></div>
+                <div class="video-title">Rock Paper Scissors</div>
+                <div class="placeholder-box">
+                    <div class="placeholder-text">⚠ DATA RECONSTRUCTION IN PROGRESS ⚠<br><br>RESTORATION PENDING</div>
+                </div>
+            </div>
+
+            <!-- VID-010 -->
             <div class="video-container">
-                <div class="video-code">EVIDENCE ITEM: VID-005</div>
+                <div class="video-code">EVIDENCE ITEM: VID-010 <span class="status-badge status-available">AVAILABLE</span></div>
                 <div class="video-title">Cow Theme Parks</div>
                 <div class="video-wrapper">
                     <iframe src="https://player.vimeo.com/video/940311827?badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Cow Theme Parks"></iframe>
@@ -264,6 +371,7 @@
         <p>&copy; 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
         <p style="margin-top: 15px; font-size: 0.85rem; color: #8b0000;">CLASSIFICATION LEVEL: UNRESTRICTED | Document ID: TME-1310-VIDEO</p>
+        <p style="margin-top: 10px; font-size: 0.85rem; color: #8b0000;">RECOVERY STATUS: 6/10 ARTIFACTS AUTHENTICATED</p>
     </footer>
 
     <script src="https://player.vimeo.com/api/player.js"></script>
