Make core member cards clickable to bio pages

--- a/index.html
+++ b/index.html
@@ -218,11 +218,16 @@
             text-align: center;
             transition: all 0.3s;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+            text-decoration: none;
+            display: block;
+            color: inherit;
         }
 
         .member-card:hover {
             border-color: rgba(101, 67, 33, 0.8);
             transform: scale(1.05);
+            background: rgba(212, 197, 160, 0.95);
         }
 
         .member-name {
@@ -345,40 +350,40 @@
         <div class="section-label">SUBJECT IDENTIFICATIONS - CORE GROUP</div>
         <h2>Personnel Documentation</h2>
         <div class="members">
-            <div class="member-card">
+            <a href="stephen-murphy.html" class="member-card">
                 <div class="member-name">Stephen A. Murphy</div>
                 <div class="member-role">Guitars, Keys, Bass, Vocals</div>
-            </div>
-            <div class="member-card">
+            </a>
+            <a href="john-caulfield.html" class="member-card">
                 <div class="member-name">John Caulfield</div>
                 <div class="member-role">Guitars, Vocals</div>
-            </div>
-            <div class="member-card">
+            </a>
+            <a href="gary-bloxsom.html" class="member-card">
                 <div class="member-name">Gary Bloxsom</div>
                 <div class="member-role">Drums, Percussion, Backing Vocals</div>
-            </div>
-            <div class="member-card">
+            </a>
+            <a href="angela-brown.html" class="member-card">
                 <div class="member-name">Angela Brown</div>
                 <div class="member-role">Vocals</div>
-            </div>
+            </a>
         </div>
         
         <div class="section-label" style="margin-top: 60px;">SUPPLEMENTARY PERSONNEL</div>
         <h2 style="margin-top: 20px;">Guest Collaborators</h2>
         <div class="members">
-            <div class="member-card">
+            <div class="member-card" style="cursor: default;">
                 <div class="member-name">Roy Nelson</div>
                 <div class="member-role">Harmonica<br><span style="font-size: 0.9rem; opacity: 0.8;">Too Far North (To Get a Tan)</span></div>
             </div>
-            <div class="member-card">
+            <div class="member-card" style="cursor: default;">
                 <div class="member-name">Eden Meshida</div>
                 <div class="member-role">Bass<br><span style="font-size: 0.9rem; opacity: 0.8;">CFC Free (Cling Film Figurines)</span></div>
             </div>
-            <div class="member-card">
+            <div class="member-card" style="cursor: default;">
                 <div class="member-name">Karen Shafer</div>
                 <div class="member-role">Doors<br><span style="font-size: 0.9rem; opacity: 0.8;">The Search, What's in the Box?</span></div>
             </div>
-            <div class="member-card">
+            <div class="member-card" style="cursor: default;">
                 <div class="member-name">Suki</div>
                 <div class="member-role">Barks<br><span style="font-size: 0.9rem; opacity: 0.8;">The Search, What's in the Box?</span></div>
             </div>
