Expand Stephen Murphy bio - emphasize role as band architect and Professor Zap's capabilities

--- a/stephen-murphy.html
+++ b/stephen-murphy.html
@@ -32,33 +32,43 @@
         <a href="index.html" class="back-link">← Return to Archive Index</a>
     </header>
     <section>
-        <div class="section-label">CASE #1310 - SUBJECT DOCUMENTATION</div>
+        <div class="section-label">CASE #1310 - PRIMARY SUBJECT DOCUMENTATION</div>
         <h2>Stephen A. Murphy</h2>
         <div class="profile-content">
-            <p style="text-align: center; font-weight: bold; margin-bottom: 20px;">Primary Instrumentalist • Multi-instrumentalist • Composer</p>
+            <p style="text-align: center; font-weight: bold; margin-bottom: 20px;">Project Architect • Primary Instrumentalist • Composer • Multi-instrumentalist</p>
             <p style="text-align: center; margin-bottom: 40px; font-style: italic;">Guitars, Keys, Bass, Vocals</p>
             
             <div class="revelation-box">
                 <h3>⚠ CRITICAL DISCOVERY - AUTHENTICATION PENDING ⚠</h3>
                 <p style="font-style: italic; margin-top: 15px;"><strong>URGENT ADDENDUM:</strong> During routine analysis of recovered visual documentation, image enhancement algorithms detected anomalous rendering patterns inconsistent with standard photographic capture. Further investigation has uncovered evidence suggesting subject "Stephen A. Murphy" may be a dimensional manifestation portrayed by an entity from parallel reality designated as:</p>
                 <p style="text-align: center; font-size: 1.3rem; font-weight: bold; margin: 20px 0; color: #8b0000;">PROFESSOR ZACHARY ZAP</p>
-                <p style="font-style: italic;">Cross-dimensional character analysis indicates: Scientific background, propensity for experimentation, possible expertise in reality manipulation. Visual evidence attached below.</p>
+                <p style="font-style: italic;">Cross-dimensional character analysis indicates: Scientific background, propensity for experimentation, possible expertise in reality manipulation. Subject appears to be primary architect of interdimensional collective. Visual evidence attached below.</p>
             </div>
 
             <img src="professor-zachary-zap.jpg" alt="Professor Zachary Zap" class="character-image">
             
-            <p style="margin-top: 30px;"><strong>Initial Hypothesis:</strong> Subject appears to operate as interdimensional avatar or proxy entity. The "Professor" designation suggests advanced technical knowledge, potentially explaining the sophisticated audio engineering present in recovered artifacts. Musical versatility across multiple instruments (guitars, keys, bass, vocals) may indicate enhanced cognitive processing capabilities characteristic of alternate-reality manifestations.</p>
+            <p style="margin-top: 30px;"><strong>Primary Subject Status:</strong> Evidence strongly suggests this entity serves as Case #1310's founder and principal coordinator. The collective bears subject's dimensional surname ("The Murphy Experiment"), indicating leadership role and conceptual ownership. Subject appears responsible for project inception, creative vision, and ongoing dimensional coordination across 5,000+ mile geographic separation between Arizona and Northern Ireland recording locations.</p>
 
-            <p style="margin-top: 20px;"><strong>Dimensional Profile Analysis:</strong> Character archetype suggests: innovative thinker, unconventional problem-solver, likely to pursue experimental approaches regardless of conventional limitations. This personality matrix aligns precisely with documented creative philosophy of Case #1310 collective: "Yeah, but what if we tried THIS instead?"</p>
+            <p style="margin-top: 20px;"><strong>Academic Credentials Analysis:</strong> "Professor" designation reveals advanced expertise, likely in dimensional physics, sonic manipulation, or reality engineering. This academic foundation explains the sophisticated audio production quality throughout recovered artifacts - technical precision married to creative experimentation. Subject demonstrates rare combination: theoretical knowledge sufficient to understand complex systems, practical skill to implement vision across multiple instruments and technologies.</p>
 
-            <p style="font-style: italic; color: #8b0000; margin-top: 40px;"><strong>Researcher's Conclusion:</strong> If validated, this discovery fundamentally alters our understanding of Case #1310. The interdimensional travel hypothesis may not be metaphorical. Subject group may literally consist of characters operating across dimensional boundaries, using music as a universal constant for inter-reality communication. Implications: staggering. Further investigation: mandatory. Authorization to expand research parameters: requested.</p>
+            <p style="margin-top: 20px;"><strong>Multi-Instrumental Mastery:</strong> Subject's documented capabilities span guitars (rhythm, lead, acoustic), keyboards (piano, synthesizers, organs), bass guitar, and vocals. Analysis of "The Boney Files" reveals subject performed majority of instrumental parts across the ten-track collection. This versatility suggests either: (A) decades of dedicated study, or (B) enhanced dimensional cognitive abilities allowing rapid skill acquisition. Given interdimensional origin, option B appears more probable.</p>
+
+            <p style="margin-top: 20px;"><strong>Compositional Architecture:</strong> Subject's creative output demonstrates genre-fluid approach spanning progressive rock, folk, alternative, experimental, and comedic styles - often within single compositions. Track analysis reveals sophisticated song structures: "CFC Free (Cling Film Figurines)" showcases 7+ minute progressive journey; "The Search" blends theatrical storytelling with musical complexity; "Too Far North (To Get a Tan)" demonstrates melodic folk sensibility. This range suggests dimensional perspective unbounded by single-genre limitations.</p>
+
+            <p style="margin-top: 20px;"><strong>Production Methodology:</strong> Subject's approach mirrors scientific experimentation: hypothesis ("what if we tried THIS instead?"), testing, iteration, refinement. Recovered documentation indicates four-year production timeline (2020-2024), suggesting methodical rather than rushed creative process. Each track appears treated as unique experiment in sonic possibility. The willingness to pursue unconventional ideas (songs about cows, cling film figurines, dimensional travel disguised as relationship metaphors) indicates freedom from commercial constraints - characteristic of dimensional entity unburdened by earthly music industry pressures.</p>
+
+            <p style="margin-top: 20px;"><strong>Leadership Profile:</strong> Subject successfully assembled three additional dimensional entities, each contributing specialized capabilities. This recruitment suggests: (A) awareness of dimensional talent pool, (B) ability to communicate across reality boundaries, (C) vision compelling enough to unite diverse entities toward common creative goal. The collective's cohesion despite geographic and dimensional separation implies sophisticated coordination abilities.</p>
+
+            <p style="margin-top: 20px;"><strong>Dimensional Personality Assessment:</strong> "Zachary Zap" nomenclature proves revealing. "Zachary" suggests reliability, intelligence, methodical thinking. "Zap" implies energy, sudden inspiration, electrical creativity. Combined with "Professor" title: methodical genius capable of unexpected creative bursts. This duality appears throughout Case #1310's work - careful composition structure housing chaotic creative ideas. The embodiment of "Yeah, but what if we tried THIS instead?" philosophy.</p>
+
+            <p style="font-style: italic; color: #8b0000; margin-top: 40px;"><strong>Researcher's Primary Assessment:</strong> Subject Murphy/Zap represents nexus point of Case #1310 phenomenon. All evidence suggests this entity conceived interdimensional musical project, recruited complementary dimensional talents, composed majority of material, performed substantial instrumental content, engineered/produced final artifacts, and maintained creative vision throughout four-year manifestation period. If hypothesis proves correct - that Case #1310 represents first documented interdimensional musical collective - then this subject stands as architect of unprecedented cross-reality creative achievement. Further investigation mandatory. This researcher suspects subject's capabilities extend far beyond current documentation. The question persists: what experiments come next?</p>
         </div>
     </section>
     <footer>
         <p>© 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
         <p style="margin-top: 15px; font-size: 0.85rem; color: #8b0000;">CLASSIFICATION LEVEL: RESTRICTED | Document ID: TME-1310-BIO-SM-REVISED</p>
-        <p style="margin-top: 5px; font-size: 0.85rem; color: #8b0000;">⚠ INTERDIMENSIONAL EVIDENCE DETECTED ⚠</p>
+        <p style="margin-top: 5px; font-size: 0.85rem; color: #8b0000;">⚠ PRIMARY ARCHITECT - INTERDIMENSIONAL EVIDENCE DETECTED ⚠</p>
     </footer>
 </body>
 </html>
