Update Angela Brown page - remove conclusion, link to separate conclusion page

--- a/angela-brown.html
+++ b/angela-brown.html
@@ -13,6 +13,8 @@
         .logo { font-family: 'Courier New', monospace; font-size: 3rem; font-weight: bold; color: #014208; margin-bottom: 10px; text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); letter-spacing: 0.05em; }
         .back-link { display: inline-block; margin-top: 20px; background: linear-gradient(135deg, #654321, #4a3319); color: #f5e6d3; padding: 12px 30px; border: 2px solid #8b5a2b; border-radius: 50px; font-size: 1rem; cursor: pointer; text-decoration: none; transition: all 0.3s; box-shadow: 0 5px 20px rgba(101, 67, 33, 0.4); margin: 0 10px; }
         .back-link:hover { transform: translateY(-3px); box-shadow: 0 8px 30px rgba(101, 67, 33, 0.6); background: linear-gradient(135deg, #8b5a2b, #654321); }
+        .conclusion-link { display: inline-block; margin-top: 20px; background: linear-gradient(135deg, #014208, #012a05); color: #f5e6d3; padding: 12px 30px; border: 2px solid #014208; border-radius: 50px; font-size: 1rem; cursor: pointer; text-decoration: none; transition: all 0.3s; box-shadow: 0 5px 20px rgba(1, 66, 8, 0.4); margin: 0 10px; }
+        .conclusion-link:hover { transform: translateY(-3px); box-shadow: 0 8px 30px rgba(1, 66, 8, 0.6); background: linear-gradient(135deg, #016a0a, #014208); }
         .prev-link { display: inline-block; margin-top: 20px; background: linear-gradient(135deg, #5a3a1a, #3d2813); color: #f5e6d3; padding: 12px 30px; border: 2px solid #5a3a1a; border-radius: 50px; font-size: 1rem; cursor: pointer; text-decoration: none; transition: all 0.3s; box-shadow: 0 5px 20px rgba(90, 58, 26, 0.4); margin: 0 10px; }
         .prev-link:hover { transform: translateY(-3px); box-shadow: 0 8px 30px rgba(90, 58, 26, 0.6); background: linear-gradient(135deg, #6b4a2a, #5a3a1a); }
         section { position: relative; padding: 80px 20px; max-width: 1200px; margin: 0 auto; }
@@ -22,8 +24,6 @@
         .revelation-box { background: rgba(139, 0, 0, 0.15); border: 3px solid #8b0000; padding: 30px; border-radius: 15px; margin: 30px 0; }
         .revelation-box h3 { color: #8b0000; font-size: 1.5rem; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 0.1em; text-align: center; }
         .character-image { max-width: 400px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.4); border: 3px solid rgba(139, 0, 0, 0.6); margin: 20px auto; display: block; }
-        .final-conclusion { background: rgba(1, 66, 8, 0.1); border: 4px double #014208; padding: 40px; border-radius: 15px; margin: 40px 0; text-align: center; }
-        .final-conclusion h3 { color: #014208; font-size: 1.8rem; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 0.15em; }
         .navigation-box { background: rgba(1, 66, 8, 0.1); border: 2px solid #014208; padding: 30px; border-radius: 15px; margin: 40px 0; text-align: center; }
         footer { text-align: center; padding: 40px 20px; color: #3d2813; border-top: 2px solid rgba(101, 67, 33, 0.6); margin-top: 80px; font-weight: bold; }
         @media (max-width: 768px) { .logo { font-size: 2rem; } h2 { font-size: 2rem; } }
@@ -60,36 +60,23 @@
 
             <p style="margin-top: 20px;"><strong>Vocal Frequency Analysis:</strong> Previously documented "heightened sensitivity to dimensional frequencies" now explained through interdimensional origin. Subject's voice serves as primary communication channel for Case #1310's cross-reality messaging. Vocal range spanning multiple octaves may indicate enhanced physiological capabilities characteristic of dimensional entities. Emotional resonance in performances suggests genuine interdimensional empathy - ability to channel feelings across reality boundaries.</p>
 
-            <div class="final-conclusion">
-                <h3>🌟 CASE #1310: FINAL CONCLUSION 🌟</h3>
-                <p style="font-weight: bold; font-size: 1.2rem; margin: 20px 0; line-height: 1.8;">ALL FOUR CORE SUBJECTS CONFIRMED AS INTERDIMENSIONAL MANIFESTATIONS</p>
-                <p style="margin-top: 20px; line-height: 1.8;"><strong>The Murphy Experiment</strong> represents the first fully-documented case of interdimensional musical collective operating across reality boundaries. Team composition appears deliberately assembled:</p>
-                <p style="margin-top: 15px; line-height: 1.8;">
-                    <strong>Professor Zachary Zap</strong> (Murphy): Scientific leadership + Multi-instrumental versatility<br>
-                    <strong>Captain Bash Glockenheim</strong> (Bloxsom): Temporal precision + Structural discipline<br>
-                    <strong>Dr. Thierry Highjinks</strong> (Caulfield): Technical mastery + Creative chaos<br>
-                    <strong>Countess Vanessa Switchbait</strong> (Brown): Commanding presence + Emotional range
-                </p>
-                <p style="margin-top: 20px; font-style: italic; line-height: 1.8;"><strong>Mission Assessment:</strong> Music serves as universal constant enabling cross-dimensional communication. "Genre Fluid Rock" classification reflects literal dimensional fluidity. Creative philosophy "Yeah, but what if we tried THIS instead?" suggests active exploration of multiple reality possibilities simultaneously.</p>
-                <p style="margin-top: 20px; font-weight: bold; color: #8b0000;">Case Status: CLOSED - PHENOMENON CONFIRMED</p>
-                <p style="margin-top: 10px; font-weight: bold; color: #014208;">Recommendation: Continue monitoring. Implications for human understanding of reality: SUBSTANTIAL.</p>
-            </div>
-
-            <p style="font-style: italic; color: #8b0000; margin-top: 40px;"><strong>Lead Researcher's Final Note:</strong> After months of analysis, the truth emerges stranger than initially hypothesized. The Murphy Experiment is not simply a band - it is a dimensional embassy, using music as the common language between worlds. Their message appears benevolent: creativity transcends boundaries, collaboration crosses realities, and the question "what if we tried THIS instead?" applies not just to musical choices, but to the very nature of existence itself. This researcher's work is complete. Let the music speak for itself.</p>
+            <p style="font-style: italic; color: #8b0000; margin-top: 40px;"><strong>Researcher's Assessment:</strong> Fourth and final subject confirmed as interdimensional manifestation. Pattern completion validates hypothesis. All four core members of Case #1310 collective verified as entities operating across dimensional boundaries. Probability of coincidence: statistically impossible. This represents first fully-documented interdimensional musical collective in recorded history. Comprehensive analysis and final conclusions compiled in separate case summary report.</p>
 
             <div class="navigation-box">
                 <p style="font-weight: bold; font-size: 1.2rem; margin-bottom: 15px; color: #014208;">INVESTIGATION COMPLETE</p>
-                <p style="margin-bottom: 20px;">All four dimensional entities confirmed. Case #1310 phenomenon validated. Archive sealed.</p>
-                <a href="john-caulfield.html" class="prev-link">← Previous: John Caulfield</a>
+                <p style="margin-bottom: 20px;">All four dimensional entities confirmed. Final subject verified. Proceeding to case conclusion.</p>
+                <div>
+                    <a href="john-caulfield.html" class="prev-link">← Previous: John Caulfield</a>
+                    <a href="conclusion.html" class="conclusion-link">View Final Case Analysis →</a>
+                </div>
             </div>
         </div>
     </section>
     <footer>
         <p>© 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
-        <p style="margin-top: 15px; font-size: 0.85rem; color: #8b0000;">CLASSIFICATION LEVEL: MAXIMUM RESTRICTED | Document ID: TME-1310-BIO-AB-FINAL</p>
-        <p style="margin-top: 5px; font-size: 0.85rem; color: #014208;">⚠ COMPLETE INTERDIMENSIONAL COLLECTIVE CONFIRMED ⚠</p>
-        <p style="margin-top: 5px; font-size: 0.85rem; color: #8b0000;">CASE STATUS: PHENOMENON VALIDATED - ARCHIVE COMPLETE</p>
+        <p style="margin-top: 15px; font-size: 0.85rem; color: #8b0000;">CLASSIFICATION LEVEL: RESTRICTED | Document ID: TME-1310-BIO-AB-REVISED</p>
+        <p style="margin-top: 5px; font-size: 0.85rem; color: #8b0000;">⚠ INTERDIMENSIONAL EVIDENCE DETECTED ⚠</p>
     </footer>
 </body>
 </html>
