--- a/conclusion.html
+++ b/conclusion.html
@@ -19,6 +19,7 @@
         .conclusion-content { background: rgba(245, 230, 211, 0.95); padding: 60px 40px; border-radius: 20px; border: 3px solid rgba(101, 67, 33, 0.6); box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3); line-height: 1.8; font-size: 1.1rem; color: #1a1a1a; }
         .final-conclusion { background: rgba(1, 66, 8, 0.15); border: 4px double #014208; padding: 50px; border-radius: 15px; margin: 40px 0; text-align: center; }
         .final-conclusion h3 { color: #014208; font-size: 2.2rem; margin-bottom: 25px; text-transform: uppercase; letter-spacing: 0.15em; }
+        .collective-image { max-width: 800px; width: 100%; border-radius: 15px; box-shadow: 0 15px 50px rgba(0,0,0,0.5); border: 4px solid rgba(1, 66, 8, 0.8); margin: 30px auto; display: block; }
         .subject-summary { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 30px 0; }
         .subject-box { background: rgba(212, 197, 160, 0.8); padding: 20px; border-radius: 10px; border: 2px solid rgba(101, 67, 33, 0.5); }
         .subject-box h4 { color: #3d2813; margin-bottom: 10px; font-size: 1.2rem; }
@@ -43,6 +44,9 @@
             <div class="final-conclusion">
                 <h3>🌟 CASE #1310: PHENOMENON CONFIRMED 🌟</h3>
                 <p style="font-weight: bold; font-size: 1.3rem; margin: 25px 0; line-height: 1.8; color: #014208;">ALL FOUR CORE SUBJECTS CONFIRMED AS INTERDIMENSIONAL MANIFESTATIONS</p>
+                
+                <img src="the-murphy-experiment-collage.jpg" alt="The Complete Interdimensional Collective" class="collective-image">
+                
                 <p style="margin-top: 25px; line-height: 1.8; font-size: 1.05rem;"><strong>The Murphy Experiment</strong> represents the first fully-documented case of an interdimensional musical collective operating across reality boundaries. Analysis reveals deliberate team composition, each member contributing specialized capabilities from their dimensional origin.</p>
             </div>
 
